--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@
 }
 
 body {
-    background: linear-gradient(#1354A5 0%, #041832 33.33%, #041832 66.67%, #01080E 100%);
+    background: linear-gradient(#079ea3 0%, #041832 33.33%, #023133 66.67%, #01080E 100%);
     height: 100vh;
     display: flex;
     align-items: center;
@@ -16,7 +16,7 @@ body {
 
 body::before {
     background-image: url("img/code.png");
-    background-repeat: no-repeat;
+    background-repeat:repeat;
     background-position: right;
     content: "";
     display: block;
@@ -27,13 +27,14 @@ body::before {
 }
 
 .container {
-    width: 1200px;
-    height: 600px;
+    margin:5%;
+    width: 100%;
+    height: 90%;
     display: flex;
     align-items: center;
     justify-content: space-between;
     border-radius: 24px;
-    border: 1px solid #1875E8;
+    border: 1px solid #191842;
     box-shadow: 4px 4px 20px 0px rgba(1, 8, 14, 0.15);
     background-image: url("img/Ruido.png");
     background-size: 100% 100%;
@@ -46,6 +47,7 @@ body::before {
     align-items: center;
     position: absolute;
     bottom: 0;
+  
 }
 
 .container__informaciones {
@@ -98,6 +100,11 @@ h1 {
     font-family: 'Chakra Petch', sans-serif;
     font-size: 72px;
     padding-bottom: 3rem;
+    text-shadow: 
+    -1px -1px 0 #000,  
+    1px -1px 0 #000,
+    -1px 1px 0 #000,
+    1px 1px 0 #000; 
 }
 
 p,
@@ -108,4 +115,9 @@ button {
 .texto__parrafo {
     font-size: 32px;
     font-weight: 400;
+}
+
+.container__imagen-persona{
+width: 40%;
+
 }
